fixing app overflow issue #1

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body {
     height: 100dvh;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     font-family: sans-serif;
